# music-classifier

./: .gitignore  DEMO_AO_VIVO.md  PERGUNTAS_PREPARACAO.md  README.md  RUNBOOK.md  pyproject.toml
configs/: colab_drive.yaml  full_cuda.yaml  local_smoke.yaml
site/: index.html  main.js  publico.css  publico.html  styles.css
src/mert_genre_classifier/: __init__.py  audio.py  cli.py  config.py  dataset.py  embeddings.py  evaluate.py  io.py  models.py  paths.py  predict.py
tests/: test_audio.py  test_config.py  test_labels.py  test_train_evaluate_synthetic.py
