[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mert-genre-classifier"
version = "0.1.0"
description = "Pipeline local para classificar generos musicais com embeddings congelados do MERT."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.18",
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
  "soundfile>=0.12",
  "torch>=2.2",
  "torchcodec>=0.1",
  "torchaudio>=2.2",
  "tqdm>=4.66",
  "transformers>=4.39",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
mert-genre = "mert_genre_classifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
